--- a/home.html
+++ b/home.html
@@ -187,7 +187,7 @@
 
         <div class="course-container">
           <h2 class="course-title">
-            our course
+            pricing
           </h2>
           <div id="courses" class="course"> 
             <div class="card">
