I nedd to change the images in the pages

--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- variables  styles  -->
-    <link rel="stylesheet" href="css/styleVariables.css" />
-    <!-- navigation style & js -->
-    <link rel="stylesheet" href="css/styleVariables.css" />
-    <link rel="stylesheet" href="./css/nav.css" />
-    <script src="./js/nav.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Learn JavaScript and CSS with Video Tutorials">
+    <meta name="description" content="Explore a comprehensive collection of video tutorials covering JavaScript variables, DOM manipulation, CSS properties, and more. Perfect for beginners and advanced learners.">
+    <meta name="keywords" content="JavaScript, CSS, tutorial, video, programming, web development, DOM, variables, Flexbox, Grid">
+    <meta name="author" content="Faba Traore" />
+    <meta name="robots" content="index, follow">
+      <!-- favicon  -->
+      <link rel="icon"  href="/images/favicon.png" type="image/png">
+      <!-- variables  styles  -->
+      <link rel="stylesheet" href="css/styleVariables.css" />
+      <!-- navigation style & js -->
+      <link rel="stylesheet" href="/css/nav.css" />
+      <script src="/js/nav.js" defer></script>
+      <!-- code styles -->
+      <link rel="stylesheet" href="css/codeStyles.css">
     <title>Home page</title>
     <style></style>
   </head>
   <body>
     <!-- nav -->
     <div class="top-nav" id="my-topnav">
-      <a href="home.html" id="active">Home</a>
+      <a href="index.html" id="active">Home</a>
       <div class="dropdown">
         <button class="drop-btn">
           Course
@@ -461,5 +469,58 @@
         </div>
       </div>
     </div>
+    <!-- footer -->
+    <footer>
+      <div class="footer-container">
+          <div class="footer-section company-info">
+              <img src="logo.png" alt="Company Logo">
+              <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
+              <div class="social-media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+          </div>
+          <div class="footer-section solutions">
+              <h4>Solutions</h4>
+              <ul>
+                  <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
+                  <li><a href="/about.html">Team</a></li>
+                  <li><a href="about.html">Contact</a></li>
+                  <li><a href="#">Insights</a></li>
+              </ul>
+          </div>
+          <div class="footer-section support">
+              <h4>Support</h4>
+              <ul>
+                  <li><a href="#course">Pricing</a></li>
+                  <li><a href="#">Documentation</a></li>
+                  <li><a href="#">Guides</a></li>
+                  <li><a href="#">API Status</a></li>
+              </ul>
+          </div>
+          <div class="footer-section company">
+              <h4>Company</h4>
+              <ul>
+                  <li><a href="/about.html">About</a></li>
+                  <li><a href="/home.html">Blog</a></li>
+                  <li><a href="home.html">Jobs</a></li>
+                  <li><a href="about.html">Partners</a></li>
+              </ul>
+          </div>
+          <div class="footer-section legal">
+              <h4>Legal</h4>
+              <ul>
+                  <li><a href="#">Claim</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Terms</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="footer-bottom">
+          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
+      </div>
+  </footer>
   </body>
 </html>
