--- a/about.html
+++ b/about.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Faba Fasti Traore" />
-    <!-- loading css styles -->
-    <link rel="stylesheet" href="css/loading.css">
-    <!-- loading js -->
-    <script defer src="/js/loading.js" ></script>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Learn JavaScript and CSS with Video Tutorials">
+  <meta name="description" content="Explore a comprehensive collection of video tutorials covering JavaScript variables, DOM manipulation, CSS properties, and more. Perfect for beginners and advanced learners.">
+  <meta name="keywords" content="JavaScript, CSS, tutorial, video, programming, web development, DOM, variables, Flexbox, Grid">
+  <meta name="author" content="Faba Traore" />
+  <meta name="robots" content="index, follow">
+    <!-- favicon  -->
+    <link rel="icon"  href="/images/favicon.png" type="image/png">
     <!-- variables  styles  -->
     <link rel="stylesheet" href="css/styleVariables.css" />
     <!-- navigation style & js -->
     <link rel="stylesheet" href="/css/nav.css" />
     <script src="/js/nav.js" defer></script>
-
-    <!-- main body css -->
-    <link rel="stylesheet" href="/css/content.css" />
+    <!-- loading css styles and js  -->
+    <link rel="stylesheet" href="css/loading.css">
+    <script defer src="/js/loading.js" ></script>
     <!-- main body css -->
     <link rel="stylesheet" href="/css/about.css" />
     <script src="/js/about.js"></script>
@@ -24,7 +26,7 @@
   <body>
     <!-- navigation bar -->
     <div class="top-nav" id="my-topnav">
-      <a href="home.html" id="active">Home</a>
+      <a href="index.html" id="active">Home</a>
       <div class="dropdown">
         <button class="drop-btn">
           Course
@@ -33,7 +35,6 @@
         <div class="drop-content">
           <a href="htmlCourse.html">HTML</a>
           <a href="cssCourse.html">CSS</a>
-          <a href="jscourse.html">JavaScript</a>
         </div>
       </div>
       <a href="videos.html">Video</a>
@@ -377,40 +378,57 @@
       </div>
     </div>
     <!-- footer -->
-    <footer id="hidden" class="footer">
+    <footer>
       <div class="footer-container">
-        <div class="row">
-          <div class="footer-col">
-            <h4>Company</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Solutions</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">Exercises</a></li>
-            </ul>
+          <div class="footer-section company-info">
+              <img src="logo.png" alt="Company Logo">
+              <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
+              <div class="social-media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
           </div>
-          <div class="footer-col">
-            <h4>Documentation</h4>
-            <ul>
-              <li><a href="#">Get Centre</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Policy</a></li>
-              <li><a href="#">Career</a></li>
-            </ul>
+          <div class="footer-section solutions">
+              <h4>Solutions</h4>
+              <ul>
+                  <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
+                  <li><a href="/about.html">Team</a></li>
+                  <li><a href="about.html">Contact</a></li>
+                  <li><a href="#">Insights</a></li>
+              </ul>
           </div>
-          <div class="footer-col">
-            <h4>Social media</h4>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
+          <div class="footer-section support">
+              <h4>Support</h4>
+              <ul>
+                  <li><a href="#course">Pricing</a></li>
+                  <li><a href="#">Documentation</a></li>
+                  <li><a href="#">Guides</a></li>
+                  <li><a href="#">API Status</a></li>
+              </ul>
           </div>
-        </div>
+          <div class="footer-section company">
+              <h4>Company</h4>
+              <ul>
+                  <li><a href="/about.html">About</a></li>
+                  <li><a href="/home.html">Blog</a></li>
+                  <li><a href="home.html">Jobs</a></li>
+                  <li><a href="about.html">Partners</a></li>
+              </ul>
+          </div>
+          <div class="footer-section legal">
+              <h4>Legal</h4>
+              <ul>
+                  <li><a href="#">Claim</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Terms</a></li>
+              </ul>
+          </div>
       </div>
-    </footer>
+      <div class="footer-bottom">
+          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
+      </div>
+  </footer>
   </body>
 </html>
