I am goin to finish to the viode page on 21/05/2024

--- a/cssCourse.html
+++ b/cssCourse.html
@@ -17,7 +17,7 @@
   <body>
     <!-- navigation bar -->
     <div class="top-nav" id="my-topnav">
-      <a href="home.html" id="active">Home</a>
+      <a href="index.html" id="active">Home</a>
       <div class="dropdown">
         <button class="drop-btn">
           Course
