--- a/index.html
+++ b/index.html
@@ -151,20 +151,20 @@
 <div class="projects-info">
    <div class="info">
     <h2>Contact form</h2>
-    <img src="/images/developers.jpg" alt="">
+    <img src="/images/form.png" alt="">
   </div>
     
    <div class="info">
     <h2>Counter</h2>
-    <img src="/images/developers.jpg" alt="">
+    <img src="/images/counter.png" alt="">
   </div>
    <div class="info">
     <h2>todo list</h2>
-    <img src="/images/developers.jpg" alt="">
+    <img src="/images/todo.png" alt="">
   </div>
    <div class="info">
     <h2>TOGGLE MODE</h2>
-    <img src="/images/developers.jpg" alt="">
+    <img src="/images/toggle.png" alt="">
   </div>
   </div>
 
@@ -218,7 +218,7 @@
                   <span>Images &amp; videos</span>
                 </li>
               </ul>
-              <button type="button" class="action">Get Started</button>
+              <button type="button" class="action"><a href="htmlCourse.html">Get Started</a></button>
             </div>
              <div class="card">
               <div class="header">
@@ -252,7 +252,7 @@
                   <span>margin</span>
                 </li>
               </ul>
-              <button type="button" class="action">Get Started</button>
+              <button type="button" class="action"><a href="cssCourse.html">Get Started</a></button>
             </div>
              <div class="card">
               <div class="header">
@@ -286,7 +286,7 @@
                   <span>DOM</span>
                 </li>
               </ul>
-              <button type="button" class="action">Get Started</button>
+              <button type="button" class="action"><a href="basicJs.html">Get Started</a></button>
             </div>
              <div class="card">
               <div class="header">
@@ -320,23 +320,10 @@
                   <span>Condition</span>
                 </li>
               </ul>
-              <button type="button" class="action">Get Started</button>
+              <button type="button" class="action"><a href="react.html">Get Started</a></button>
             </div>
           </div>
         </div>
-
-        <!-- <div class="card">
-          <div class="card-content">
-            <h2>Beginner</h2>
-            <h2>CARD</h2>
-          </div>
-        </div>
-        <div class="card">
-          <h2>CARD</h2>
-        </div>
-        <div class="card">
-          <h2>CARD</h2>
-        </div> -->
       </div>
     </main>
     <!-- footer -->
@@ -389,7 +376,7 @@
           </div>
       </div>
       <div class="footer-bottom">
-          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
+          <p>&copy; 2024 mastercode, Inc. All rights reserved.</p>
       </div>
   </footer>
   </body>
