--- a/basicJs.html
+++ b/basicJs.html
@@ -16,7 +16,7 @@
   <body>
     <!-- navigation bar -->
     <div class="top-nav" id="my-topnav">
-      <a href="home.html" id="active">Home</a>
+      <a href="index.html" id="active">Home</a>
       <div class="dropdown">
         <button class="drop-btn">Course
           <i class="fab ba-caret-down"></i>
@@ -219,8 +219,7 @@
           </div>
       </div>
       <div class="footer-bottom">
-          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
-      </div>
+ <p>&copy; 2024 mastercode, Inc. All rights reserved.</p>      </div>
   </footer>
   </body>
 </html>
