--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -519,7 +519,7 @@
           </div>
       </div>
       <div class="footer-bottom">
-          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
+          <p>&copy; 2024 mastercode, Inc. All rights reserved.</p>
       </div>
   </footer>
   </body>
