--- a/videos.html
+++ b/videos.html
@@ -214,7 +214,7 @@
           </div>
       </div>
       <div class="footer-bottom">
-          <p>&copy; 2024 mastercode, lid. All rights reserved.</p>
+          <p>&copy; 2024 mastercode, Inc. All rights reserved.</p>
       </div>
   </footer>
   </body>
