--- a/cssCourse.html
+++ b/cssCourse.html
@@ -446,75 +446,39 @@
         </div>
         <!-- right card -->
         <div class="rightCard">
-          <!-- -->
-          <div class="rightCard">
             <div class="card">
               <span class="title">Contents</span>
               <div class="card__tags">
-                <ul class="tag">
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">CSC</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                  <li class="tag__name">
-                    <a href="/basicJs.html">Variable</a>
-                  </li>
-                </ul>
+                   <ul class="tag">
+    <!-- CSS Topics -->
+    <li class="tag__name"><a href="cssCourse.html">Color</a></li>
+    <li class="tag__name"><a href="cssCourse.html">Background</a></li>
+    <li class="tag__name"><a href="cssCourse.html">Font Size</a></li>
+    <li class="tag__name"><a href="cssCourse.html">Font Family</a></li>
+    <li class="tag__name"><a href="cssCourse.html">Padding</a></li>
+
+    <!-- JavaScript Topics -->
+    <li class="tag__name"><a href="basicJs.html">Variable</a></li>
+    <li class="tag__name"><a href="dom.html">DOM</a></li>
+    <li class="tag__name"><a href="basicJs.html">Data Type</a></li>
+    <li class="tag__name"><a href="basicJs.html">Condition</a></li>
+</ul>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </main>
     <!-- footer -->
-    <footer>
+  <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
               <img src="logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
           <div class="footer-section solutions">
@@ -523,39 +487,37 @@
                   <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
                   <li><a href="/about.html">Team</a></li>
                   <li><a href="about.html">Contact</a></li>
-                  <li><a href="#">Insights</a></li>
+                  <li><a href="about.html">Insights</a></li>
               </ul>
           </div>
           <div class="footer-section support">
               <h4>Support</h4>
               <ul>
-                  <li><a href="#course">Pricing</a></li>
-                  <li><a href="#">Documentation</a></li>
-                  <li><a href="#">Guides</a></li>
-                  <li><a href="#">API Status</a></li>
+                  <li><a href="index.html">Pricing</a></li>
+                  <li><a href="index.html">Documentation</a></li>
+                  <li><a href="index.html">Guides</a></li>
+                  <li><a href="index.html">API Status</a></li>
               </ul>
           </div>
           <div class="footer-section company">
               <h4>Company</h4>
               <ul>
-                  <li><a href="/about.html">About</a></li>
-                  <li><a href="/home.html">Blog</a></li>
-                  <li><a href="home.html">Jobs</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="index.html">Blog</a></li>
+                  <li><a href="index.html">Jobs</a></li>
                   <li><a href="about.html">Partners</a></li>
               </ul>
           </div>
           <div class="footer-section legal">
               <h4>Legal</h4>
               <ul>
-                  <li><a href="#">Claim</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Terms</a></li>
+                  <li><a href="about.html">Claim</a></li>
+                  <li><a href="index.html">Privacy</a></li>
+                  <li><a href="about.html">Terms</a></li>
               </ul>
           </div>
       </div>
       <div class="footer-bottom">
-          <p>&copy; 2024 Your Company, mastercode. All rights reserved.</p>
-      </div>
-  </footer>
+ <p>&copy; 2024 mastercode, Inc. All rights reserved.</p>  </footer>
   </body>
 </html>
