--- a/about.html
+++ b/about.html
@@ -94,15 +94,15 @@
     <!-- maind body -->
     <main id="main">
       <!-- about us  -->
-      <article id="hidden" class="aboutUs">
+      <article  class="aboutUs">
         <section class="header">
           <h1>About Us</h1>
           <p>Empowering You Through Code: Our Mission and Vision</p>
         </section>
       </article>
-      <section id="hidden"  class="ourVision">
+      <section  class="ourVision">
         <div>
-          <h2>out Vision</h2>
+          <h2>our Vision</h2>
         </div>
         <div>
           <p>
@@ -111,7 +111,7 @@
           </p>
         </div>
       </section>
-      <section id="hidden" class="mission">
+      <section class="mission">
         <div class="mission-heading">
           <h2>our mission</h2>
         </div>
@@ -387,10 +387,10 @@
               <img src="logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
           <div class="footer-section solutions">
@@ -399,33 +399,33 @@
                   <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
                   <li><a href="/about.html">Team</a></li>
                   <li><a href="about.html">Contact</a></li>
-                  <li><a href="#">Insights</a></li>
+                  <li><a href="about.html">Insights</a></li>
               </ul>
           </div>
           <div class="footer-section support">
               <h4>Support</h4>
               <ul>
-                  <li><a href="#course">Pricing</a></li>
-                  <li><a href="#">Documentation</a></li>
-                  <li><a href="#">Guides</a></li>
-                  <li><a href="#">API Status</a></li>
+                  <li><a href="index.html">Pricing</a></li>
+                  <li><a href="index.html">Documentation</a></li>
+                  <li><a href="index.html">Guides</a></li>
+                  <li><a href="index.html">API Status</a></li>
               </ul>
           </div>
           <div class="footer-section company">
               <h4>Company</h4>
               <ul>
-                  <li><a href="/about.html">About</a></li>
-                  <li><a href="/home.html">Blog</a></li>
-                  <li><a href="home.html">Jobs</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="index.html">Blog</a></li>
+                  <li><a href="index.html">Jobs</a></li>
                   <li><a href="about.html">Partners</a></li>
               </ul>
           </div>
           <div class="footer-section legal">
               <h4>Legal</h4>
               <ul>
-                  <li><a href="#">Claim</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Terms</a></li>
+                  <li><a href="about.html">Claim</a></li>
+                  <li><a href="index.html">Privacy</a></li>
+                  <li><a href="about.html">Terms</a></li>
               </ul>
           </div>
       </div>
